--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 ul, dl,dt,dd {margin:0;padding:0;list-style:none}
 legend {position:absolute;margin:0;padding:0;font-size:0;line-height:0;text-indent:-9999em;overflow:hidden}
-label, input, button, select, img {vertical-align:middle;font-family:'Pretendard', sans-serif;font-size: .9rem;}
+label, input, button, select, img {vertical-align:middle;font-family:'Pretendard', sans-serif;font-size: 1rem;}
 input, button {margin:0;padding:0;}
 input[type="submit"] {cursor:pointer}
 /* input:-webkit-autofill,
@@ -40,6 +40,11 @@ a {color:#000;text-decoration:none;}
 a:focus, a:focus-within, a:focus-visible, a:hover {
     color: #000;
     text-decoration: none;
+}
+
+.bttn_sbm:focus, .bttn_sbm:focus-within, .bttn_sbm:focus-visible, .bttn_sbm:hover,
+.ipt_sbm:focus, .ipt_sbm:focus-within, .ipt_sbm:focus-visible, .ipt_sbm:hover {
+    color: #fff;
 }
 
 input:focus, input[type=checkbox]:focus, input[type=file]:focus, input[type=radio]:focus,
@@ -112,7 +117,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	background: var(--main);
 	color: white;
     border: none;
-    padding: 4px 12px;
+    padding: 4px 16px;
     border-radius: 2px;	
 }
 .bttn_sbm2{
@@ -126,7 +131,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 .sel{
 	appearance: none;
 	padding: 6px 24px 6px 6px;
-	background: url(/resources/images/select_tri.png) no-repeat 95% center;
+	background: url(../resources/images/select_tri.png) no-repeat 95% center;
 	outline: 0;
 }
 .txtarea{
@@ -513,6 +518,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 .bttn_wrap .bttn{
 	padding: 8px;
 	width: 64px;
+	font-size: inherit;
 }
 
 /* 검색창 공통 */
