--- a/css/style.css
+++ b/css/style.css
@@ -457,8 +457,8 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 .content > .inner.pdx{
 	padding: 0;
 }
-.content > .inner > *{
-	margin-bottom: 30px;
+.content > .inner > * + *{
+	margin-top: 30px;
 }
 .page_top{
 	display: flex;
@@ -468,14 +468,17 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	font-size: 28px;
 }
 .page_top h2{
-	font-size: 100%;
+	font-size: 1.4rem;
 }
 .page_name2{
 	font-size: 1.4rem;
 	text-align: center;
 }
 .inner.pdx .page_name2{
-	padding-top: 60px;
+	height: 120px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .pg_wrap{
 	display: flex;
@@ -844,7 +847,10 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	display: flex;
 }
 .mp_nav{
-	width: 200px;
+    width: 200px;
+    background: #fffef9;
+    padding: 30px 20px;
+	flex: 0 0 auto;
 }
 .mp_profile{
 	text-align: center;
@@ -858,7 +864,8 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	max-width: 100%;
 }
 .mp_profile .txt{
-	white-space: nowrap;
+    white-space: nowrap;
+    padding: 10px 0;
 }
 .mp_profile .txt small{
 	color: gray;
@@ -872,3 +879,14 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	margin-bottom: 10px;
 }
 .mp_menu > li > a{display: block;}
+.mp_cont{
+    flex: 1;
+    padding: 16px 24px;	
+}
+.no_content{
+	width: 100%;
+    height: 100%;	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
