--- a/css/style.css
+++ b/css/style.css
@@ -845,9 +845,12 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 /* 마이페이지 */
 .mypage{
 	display: flex;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 1px 1px 2px 2px rgba(95, 95, 95, 0.1);
 }
 .mp_nav{
-    width: 200px;
+    width: 240px;
     background: #fffef9;
     padding: 30px 20px;
 	flex: 0 0 auto;
