--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
 
 :root{
 	--main: #2A9D8F;
-	--bg: #fffbee;
+	--bg: #fffef9;
+	--sub : #fff9e4;
 }
 
 /* 초기화 */
@@ -964,4 +965,30 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	text-decoration: underline;
 	font-size: 95%;
 	text-underline-offset: 2px;
+}
+/* 마이페이지 내 갤러리 */
+.mypage .my_gall{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 28px 24px;
+}
+.mypage .my_gall > li{
+    width: calc(33.33% - 16px);
+}
+.my_gall .thumb{
+	display: block;
+	aspect-ratio: 1;
+	overflow: hidden;
+	border-radius: 16px;
+}
+.my_gall .thumb img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;	
+}
+.my_gall .txt{
+	color: gray;
+	font-size: .9rem;
+	margin-top: 10px;
+	text-align: center;
 }
