--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 .sel{
 	appearance: none;
 	padding: 6px 24px 6px 6px;
-	background: url('resources\images\select_tri.png') no-repeat 95% center;
+	background: url('/resources/images/select_tri.png') no-repeat 95% center;
 	outline: 0;
 }
 .txtarea{
@@ -186,7 +186,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
     left: 0;
     opacity: 0;
     transition: all .2s;
-    background-image: url('resources\images\check_wh.svg');
+    background-image: url('/resources/images/check_wh.svg');
     background-size: contain;
     width: 100%;
     height: 100%;
@@ -469,6 +469,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	text-align: center;
 	height: 120px;
 	font-size: 28px;
+	background: var(--bg);
 }
 .page_top h2{
 	font-size: 1.4rem;
@@ -676,7 +677,7 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	border-right: solid 1px gray;
 	padding: 10px 4px;
 	white-space: nowrap;
-	background: #f2f2f2;
+	background: var(--sub);
 	text-align: center;
 }
 .tb td{
@@ -991,4 +992,8 @@ input:focus-visible, input[type=checkbox]:focus-visible, input[type=file]:focus-
 	font-size: .9rem;
 	margin-top: 10px;
 	text-align: center;
+}
+
+.my_board > * + *{
+	margin-top: 30px;
 }
